--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "trupedia/laravel-blade-haml",
     "description": "Wraps MtHaml for ease use in Laravel 5 with Blade syntax style",
-    "keywords":
+    "keywords": ["haml", "blade", "laravel"],
     "authors": [
         {
             "name": "Julian Karhoff",
